# engram-harness

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PLAN-python-tools.md  README.md  ROADMAP.md  conftest-refactor-plan.md  conftest.py  pyproject.toml  start-dev.bat  start-dev.sh
.github/workflows/: ci.yml  pages.yml
.plans/: 12-frontend-sse-robustness.md  13-frontend-optimistic-send.md  README.md  working-memory-2026-04-20.md  working-memory-2026-04-21.md
.plans/archived/: 01-adaptive-recall-message-ordering.md  02-sse-asyncio-thread-safety.md  03-session-store-concurrency.md  04-plan-tools-git-provenance.md  05-otel-endpoint-url.md  06-plan-postcondition-approval.md  07-trace-bridge-plan-access.md  08-recall-event-dedupe.md  09-access-namespace-normalization.md  10-grok-native-search-ordering.md  11-frontend-tool-result-keying.md  14-pyproject-extras-packaging.md  15-integration-test-backfill.md  16-interactive-subtask-tracing.md  17-cli-session-setup-extraction.md  gui-01-session-config-extraction.md  gui-02-event-streaming.md  gui-03-api-server-core.md  gui-04-session-persistence.md  gui-05-interactive-api.md  gui-06-react-frontend.md  otel-export.md  phase7-plan-tools.md  quick-wins-trace-quality.md  recall-pagination.md
docs/: agent-directed-compaction-plan.md  agent-roles-roadmap.md  architecture.md  improvement-plans-2026.md  memory-affordances-draft.md  operating.md  relevance-realization-plans.md  subagent-observability-plan.md  system-prompt-improvements-plan.md  workspace-affordances-draft.md
engram/: .cursorrules  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  FIATLUX.md  README.md  ROADMAP_1.md  agent-bootstrap.toml  cold-start-discoverability-roadmap.md  conftest.py  index.html  install-worktree.sh  setup.html  setup.sh
engram/.codex/: config.toml
engram/.cursor/: mcp.json
engram/HUMANS/: README.md
engram/core/: INIT.md
engram/core/memory/working/projects/agent-harness/IN/harness/: cli.py  engram_memory.py  pricing.py  prompts.py  pyproject.toml  report.py  requirements.txt  stream.py  trace.py  usage.py
engram/core/memory/working/projects/agent-harness/IN/harness/modes/: base.py
engram/core/memory/working/projects/agent-harness/IN/harness/tests/: test_git_tools.py
engram/core/memory/working/projects/agent-harness/IN/harness/tools/: bash.py  git.py  recall.py  todos.py
engram/core/memory/working/projects/agent-harness/IN/harness/tools/search/: __init__.py  bing.py  brave.py  tavily.py  types.py  x.py
engram/core/tools/tests/fixtures/engram-overlay/: pyproject.toml
engram/core/tools/tests/fixtures/engram-overlay/.github/workflows/: ci.yml  pages.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
harness/: .gitignore  _memory_browse.py  _session_artifacts.py  analytics.py  checkpoint.py  cli.py  cli_helpers.py  cmd_consolidate.py  cmd_decay.py  cmd_drift.py  cmd_eval.py  cmd_optimize.py  cmd_recall_debug.py  cmd_recall_eval.py  cmd_replay.py  cmd_resume.py  cmd_serve.py  cmd_status.py  compaction.py  config.py  consolidate.py  engram_memory.py  engram_schema.py  lanes.py  loop.py  loop_guards.py  memory.py  otel_export.py  pricing.json  prompts.py  pyproject.toml  report.py  role_inference.py  runner.py  sandbox.py  schema.sql  server.py  server_models.py  server_validation.py  session_artifacts.py  (+8 more)
harness/_engram_fs/: __init__.py  bm25_index.py  embedding_index.py  errors.py  frontmatter_policy.py  frontmatter_utils.py  git_repo.py  helpfulness_index.py  kline_index.py  link_graph.py  trust_decay.py
harness/engram_memory_parts/: __init__.py  format.py  paths.py  recall_helpers.py  types.py
harness/eval/: __init__.py  dataset.py  recall_runner.py  recall_scorers.py  runner.py  scorers.py
harness/modes/: base.py  grok.py  native.py  recording.py  replay.py
harness/optimize/: __init__.py  dspy_bootstrap.py  runner.py
harness/prompt_templates/: __init__.py  critical_rules.md  identity.md  memory.md  memory_read_only.md  output_native.md  output_text.md  plans_addendum.md  roles.md  rules.md  workspace.md  workspace_read_only.md
harness/safety/: __init__.py  approval.py  audit.py  injection_detector.py  rate_limit.py  role_guard.py
harness/sinks/: __init__.py  session_tracker.py  sse.py
harness/tests/: test_adaptive_recall.py  test_approval.py  test_bug_fixes.py  test_checkpoint.py  test_cli_encoding.py  test_cli_helpers.py  test_cli_session_store.py  test_cli_smoke.py  test_cli_workspace_ignore.py  test_cmd_decay.py  test_cmd_resume_relocate.py  test_compaction.py  test_config.py  test_consolidate.py  test_drift.py  test_drift_smoke.py  test_dspy_bootstrap.py  test_engram_memory.py  test_engram_schema.py  test_eval.py  test_fs_memory_mount.py  test_fs_tools.py  test_git_tools.py  test_grok_input.py  test_grok_stream_events.py  test_helpfulness_rerank.py  test_hybrid_recall.py  test_injection_classifier.py  test_interactive_loop.py  test_kline_index.py  test_lanes.py  test_link_graph.py  test_loop_repeat_guard.py  test_memory_endpoints.py  test_memory_tools.py  test_native_search_tracing.py  test_optimize.py  test_otel_export.py  test_output_limits.py  test_parallel_tools.py  (+44 more)
harness/tools/: __init__.py  _prelude.py  _python_runner.py  bash.py  git.py  help.py  memory_tools.py  pause.py  plan_tools.py  publish_doc.py  python_eval.py  python_exec.py  recall.py  run_script.py  subagent.py  todos.py  web_fetch.py  work_project_plan.py  work_tools.py  x_search.py
harness/trace_bridge_parts/: __init__.py  types.py
harness/workspace_parts/: __init__.py  constants.py  lock.py
workspace/: CURRENT.md
workspace/archive/: threads.md
workspace/notes/: affordance-umwelt-enaction-synthesis.md  affordances-gibson-ecological-psychology.md  biosemiotics-peirce-sebeok-semiosis.md  development-directions-deacon-architecture-bridge.md  development-directions-memory-debugger.md  development-directions-narrative-retrieval.md  development-directions-overview.md  knowledge-base-review-act-005.md  (+9 more)
(+1316 files in other folders)
