[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-harness"
version = "0.1.0"
description = "Agent session runner with git-backed semantic memory"
requires-python = ">=3.10"

# Base: harness CLI + Engram format layer (no MCP runtime, no embeddings)
dependencies = [
    "anthropic>=0.40",
    "openai>=1.40.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "python-frontmatter>=1.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Harness HTTP API server (FastAPI + SSE)
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.0",
]

# Semantic search (sentence-transformers for recall quality)
search = ["sentence-transformers>=2.6", "numpy>=1.24"]

# OpenTelemetry export (set OTEL_EXPORTER_OTLP_ENDPOINT to activate)
otel = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]

# Full development: all optional deps + test/lint tooling
dev = [
    "sentence-transformers>=2.6",
    "numpy>=1.24",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "time-machine>=2.0",
]

[project.scripts]
# Harness CLI (primary entry point)
harness = "harness.cli:main"
harness-report = "harness.report:main"

[tool.setuptools]
packages = [
    "harness",
    "harness._engram_fs",
    "harness.modes",
    "harness.prompt_templates",
    "harness.sinks",
    "harness.tests",
    "harness.tools",
    "harness.tools.fs",
    "harness.tools.search",
]

[tool.setuptools.package-dir]
harness = "harness"

[tool.setuptools.package-data]
harness = ["pricing.json", "py.typed"]
"harness.prompt_templates" = ["*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "engram/HUMANS/tooling/scripts/validate_memory_repo.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["harness/tests"]
asyncio_mode = "auto"
markers = [
    "eval: marks tests as eval scenario tests (deselect with '-m \"not eval\"')",
    "asyncio: marks tests as async (requires pytest-asyncio)",
]
