[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-mcp"
version = "0.1.0"
description = "Engram — persistent, git-backed agent memory exposed over MCP"
requires-python = ">=3.10"

dependencies = [
    "python-frontmatter>=1.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
server = ["mcp>=1.0"]
search = ["sentence-transformers>=2.6", "numpy>=1.24"]
dev = [
    "mcp>=1.0",
    "sentence-transformers>=2.6",
    "numpy>=1.24",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "time-machine>=2.0",
]

[project.scripts]
engram = "core.tools.agent_memory_mcp.cli.main:main"
engram-mcp = "core.tools.agent_memory_mcp.server_main:main"
engram-proxy = "core.tools.agent_memory_mcp.proxy.cli:main"
engram-sidecar = "core.tools.agent_memory_mcp.sidecar.cli:main"
engram-distribute-skills = "core.tools.agent_memory_mcp.skill_distributor:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["core/tools/tests"]
asyncio_mode = "auto"
markers = [
    "eval: marks tests as eval scenario tests (deselect with '-m \"not eval\"')",
    "asyncio: marks tests as async (requires pytest-asyncio)",
]
